# Vera

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
example/: basic.cpp
src/core/app/: App.cpp  App.h  AppInfo.h  AppSettings.h  Error.h  IBackend.h  Types.h  app.cpp  app.h  err.h  keys.h  types.h
src/core/platform/: IPlatformBackend.h  PlatformFactory.h
src/core/window/: DragDrop.h  Window.h  WindowTypes.h  window.h
src/platform/: intern.h
src/platform/wayland/: WaylandBackend.cxx  WaylandBackend.hxx
src/platform/wayland/cursor/: WaylandCursor.hxx
src/platform/wayland/desktop/: WaylandClipboard.hxx  WaylandDecoration.hxx  WaylandDragDrop.hxx  WaylandTheme.hxx
src/platform/wayland/events/: WaylandEvents.hxx
src/platform/wayland/input/: WaylandJoystick.cxx  WaylandJoystick.hxx  WaylandKeyboard.cxx  WaylandKeyboard.hxx  WaylandPointer.cxx  WaylandPointer.hxx
src/platform/wayland/input/constraints/: WaylandInputConstraint.cxx  WaylandInputConstraint.hxx
src/platform/wayland/internal/: WaylandInternal.hxx  WaylandSeat.hxx
src/platform/wayland/monitor/: WaylandMonitor.cxx  WaylandMonitor.hxx
src/platform/wayland/window/: WaylandState.hxx  WaylandWindow.cxx  WaylandWindow.hxx
src/platform/win32/: intern.h  win32Backend.cpp  win32Backend.h
src/platform/win32/events/: events.cpp  handleMessage.cpp
src/platform/win32/utils/: keyTranslationMap.h  windowCreationUtils.h
src/platform/win32/window/: vera_win32.cpp  vera_win32.h
src/platform/window/: vera_win32.cpp  vera_win32.h
src/platform/x11/: X11Backend.cxx  X11Backend.hxx
src/platform/x11/cursor/: X11Cursor.cxx  X11Cursor.hxx
src/platform/x11/desktop/: X11Clipboard.hxx  X11DragDrop.cxx  X11DragDrop.hxx  X11Theme.hxx
src/platform/x11/events/: X11Events.cxx  X11Events.hxx
src/platform/x11/input/: X11Joystick.cxx  X11Joystick.hxx  X11Keyboard.cxx  X11Keyboard.hxx  X11Mouse.hxx
src/platform/x11/internal/: X11Atoms.hxx  X11Internal.hxx  X11XInput2.hxx  X11XKB.cxx  X11XKB.hxx
src/platform/x11/monitor/: X11Monitor.cxx  X11Monitor.hxx  X11RandR.cxx  X11RandR.hxx
src/platform/x11/window/: X11Decoration.hxx  X11Fullscreen.hxx  X11Properties.hxx  X11Window.cxx  X11Window.hxx
